2014-08-10  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutlineTreeView.h:
	* X3DOutlineTreeView.cpp: 

2014-08-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Sphere.svg:
	* Dragon.svg:
	* X3DUserInterface.cpp: 

2014-08-09  Holger Seelig  <holger.seelig@yahoo.de>

	* HistoryView.xml:
	* Light.svg:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* ViewpointList.xml:
	* Geometry.svg:
	* FlyViewer.svg:
	* Viewpoint.svg:
	* Straighten.svg:
	* WalkViewer.svg:
	* PlaneViewer.svg:
	* ExamineViewer.svg:
	* OutlineEditor.svg:
	* Prototype.svg:
	* ExternProto.svg:
	* Prototype.16.svg:
	* Prototype.96.svg:
	* ExternProto.16.svg:
	* X3DTextViewEditable.cpp: 

2014-08-09  Holger Seelig  <holger.seelig@yahoo.de>

	* style.css:
	* Console.xml:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* Geometry.svg:
	* Viewpoint.svg:
	* FlyViewer.svg:
	* WalkViewer.svg:
	* PlaneViewer.svg:
	* OutlineEditor.svg:
	* ExamineViewer.svg:
	* OutlineEditor.png:
	* ViewpointEditor.xml: 

2014-08-09  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* DialogFactory.h:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* X3DBrowserEditor.cpp:
	* X3DBrowserWidget.cpp:
	* FileSaveDialog.xml:
	* FileImportDialog.xml:
	* OpenLocationDialog.xml:
	* FileSaveWarningDialog.xml:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp:
	* PrototypeInstanceDialog.xml:
	* X3DOpenLocationDialogInterface.h:
	* OpenLocationDialog.h:
	* X3DOpenLocationDialogInterface.cpp:
	* OpenLocationDialog.cpp:
	* X3DFileSaveWarningDialogInterface.h:
	* X3DNodePropertiesEditorInterface.cpp:
	* X3DPrototypeInstanceDialogInterface.h:
	* X3DFileSaveWarningDialogInterface.cpp:
	* FileSaveWarningDialog.h:
	* X3DPrototypeInstanceDialogInterface.cpp:
	* FileSaveWarningDialog.cpp:
	* PrototypeInstanceDialog.h:
	* PrototypeInstanceDialog.cpp: 

2014-08-09  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* Console.h:
	* Console.cpp:
	* DialogFactory.h:
	* X3DUserInterface.h: