@@ -1,3 +1,8 @@
+2014-08-10  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* SQLite3.h:
+	* SQLite3.cpp: 
+
 2014-07-15  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* SQLite3.cpp: 
